@@ -35,10 +35,8 @@ if (patchDEMID > -1)
             }
         }
     }
+    // Display number of seepage only for serial run (wrong value for parallel
+    if (Pstream::nProcs() == 1) Info << "Number of seepage cells = " << fixedPotentialIDList.size() << endl;
 
-    Info << "Number of seepage cells = " << fixedPotentialIDList.size() << endl;
-    if (fixedPotentialIDList.size() > 0)
-    {
-        hEqn.setValues(fixedPotentialIDList,fixedPotentialValueList);
-    }
+    if (fixedPotentialIDList.size() > 0) hEqn.setValues(fixedPotentialIDList,fixedPotentialValueList);
 }
